implemented sentence grouping in paragraphs (prototype)

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,7 +14,8 @@
     "allowJs": true,
     "checkJs": true,
     "isolatedModules": true,
-    "moduleDetection": "force"
+    "moduleDetection": "force",
+    "allowArbitraryExtensions": true
   },
   "include": ["src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
 }
