--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "gsap": "^3.13.0",
-    "pinyin": "^4.0.0",
+    "pinyin-pro": "^3.27.0",
     "tailwindcss": "^4.1.11"
   }
 }
